# api/gen/types.gen.go
@@ -1,6 +1,6 @@
 // Package gen provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.15.0 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.16.2 DO NOT EDIT.
 package gen
 
 // Defines values for TaskStatus.
@@ -26,3 +26,15 @@ type Task struct {
 
 // TaskStatus defines model for TaskStatus.
 type TaskStatus string
+
+// CreateTaskJSONBody defines parameters for CreateTask.
+type CreateTaskJSONBody struct {
+	// Description タスクの説明
+	Description *string `json:"description,omitempty"`
+
+	// Title タスク名
+	Title string `json:"title"`
+}
+
+// CreateTaskJSONRequestBody defines body for CreateTask for application/json ContentType.
+type CreateTaskJSONRequestBody CreateTaskJSONBody
