# api/schema/openapi.yaml
@@ -29,6 +29,43 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+    post:
+      summary: タスクを作成する
+      tags:
+        - task
+      operationId: createTask
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                  description: タスク名
+                description:
+                  type: string
+                  description: タスクの説明
+              required:
+                - title
+      responses:
+        '200':
+          description: 作成したタスクのID
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                required:
+                  - id
+        default:
+          description: エラー
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
 
 components:
   schemas:
